# WeRead-MCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test_mcp.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README_EN.md  review-report.md
output/2026 年 Agentic AI 工程师完全指南_一份系统化的学习路线图/: article.md
output/X上百万爆文_没有CS学位_如何12个月拿到AI工程师的Offer/: article.md  result.json
output/一文讲透Skill/: article.md
output/平均每天Vibe Coding 16小时后_这是我觉得Fable 5和GPT-5.6时代最好用的AI开发流程/: article.md
output/重磅_OpenAI 官方 Prompt 指南发布/: article.md
src/: error.rs  main.rs  parser.rs  scraper.rs  server.rs
